Double.ATG
COMPILER Double    
	
(.
			/*--------------Scanner Especification----------*/
.)

CHARACTERS 

digit = "0123456789".
tab = CHR(9).
eol = CHR(10).
blanco = eol+CHR(13)+tab+" ".
MyANY = ANY-eol.

KEYWORDS

while = "while".
do = "do".

TOKENS

number = digit{digit}.
decnumber = digit{digit}"."digit{digit}.
white = blanco{blanco}.
ANY = MyANY.

PRODUCTIONS

Expr = {Stat (";")}"."
.

Stat = 							(.value = 0  .)(.value = input().)

	Expression< ref value>		
	.

Expression<ref int result> =		(.result1 = 0.)(.result2 = 0.)
	Term< ref result1>
	{    "+"Term< ref result2>		(.result1+=result2.)
	   | "-"Term< ref result2>		(.result1-=result2.)
	}							(.result=result1.)
	.

Term<ref int result> =				(.result1 = 0.)(.result2 = 0.)
	Factor<ref result1>
	{    "*"Factor<ref result2>	(.result1*=result2.)
	   | "/"Factor<ref result2>	(.result1/=result2.)
	}							(.result=result1.)
	.
	
Factor<ref int result> =	(.signo=1.)
	["-"(.signo = -1.)]
	( Number<ref result> | "("Expression< ref result>")") (.result*=signo.)
	.
	
Number<ref int result> =  (.result = int(value).)
.
END Double
